--- a/core/package.json
+++ b/core/package.json
@@ -36,6 +36,7 @@
     "@upstash/redis": "^1.35.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
+    "@vercel/queue": "0.0.0-alpha.13",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "content-security-policy-builder": "^2.3.0",
