--- a/core/package.json
+++ b/core/package.json
@@ -38,6 +38,7 @@
     "@vercel/kv": "^3.0.0",
     "@vercel/queue": "0.0.0-alpha.13",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "^5.0.8",
     "clsx": "^2.1.1",
     "content-security-policy-builder": "^2.3.0",
     "deepmerge": "^4.3.1",
@@ -102,6 +103,7 @@
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "1.0.7",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
